projects/elements/src/switch/switch.css
:host {
  --cursor: pointer;
  --border-radius: var(--nve-ref-border-radius-xxl);
  --background: var(--nve-sys-interaction-field-background);
  --width: var(--nve-ref-size-1000);
  --height: var(--nve-ref-size-500);
  --anchor-width: calc(var(--nve-ref-size-300) + var(--nve-ref-size-50));
  --anchor-height: calc(var(--nve-ref-size-300) + var(--nve-ref-size-50));
  --anchor-border-radius: var(--nve-ref-border-radius-xxl);
  --anchor-background: var(--nve-sys-interaction-disabled-color);
  display: inline-block;
}

::slotted(input) {
  cursor: var(--cursor) !important;
  appearance: none !important;
  position: absolute !important;
  inset: 0 !important;
  width: var(--width) !important;
  height: var(--height) !important;
  border-radius: var(--border-radius) !important;
  margin: 0 !important;
  padding: 0 !important;
}

[internal-host] {
  min-height: var(--control-height);
}

[input] {
  align-items: center;
}

[input] slot {
  cursor: var(--cursor);
  border-radius: var(--border-radius);
  background: var(--background);
  height: var(--height);
  width: var(--width);
  min-height: auto;
  display: flex !important;
  padding: 0 var(--nve-ref-size-100);
  align-items: center;
  transition-duration: 200ms;
  transition-timing-function: ease-in;
  transition-property: background-color;
  position: relative;
}

:host(:state(disabled):state(checked)) [input] slot {
  --anchor-background: var(--nve-sys-interaction-disabled-background);
  --background: var(--nve-sys-interaction-disabled-color);
}

[input] slot::after {
  border-radius: var(--anchor-border-radius);
  background: var(--anchor-background);
  height: var(--anchor-height);
  width: var(--anchor-width);
  display: inline-block;
  content: '';
  transition-duration: 200ms;
  transition-timing-function: ease-in;
  transition-property: transform;
  pointer-events: none;
}

:host(:state(checked)) {
  --background: var(--nve-sys-accent-secondary-background);
  --anchor-background: var(--nve-sys-text-white-color);
}

:host(:state(checked)) [input] slot::after {
  transform: translate(calc(var(--width) / 2), 0);
}

:host(:focus-within) [input] {
  outline: 0 !important;
}

:host(:focus-within) [input] slot {
  outline: Highlight solid 2px !important;
  outline: 5px auto -webkit-focus-ring-color !important;
  outline-offset: -2px;
}

